<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etEmailLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:ems="13"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvEmailLog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tvEmailLog"
            app:layout_constraintTop_toTopOf="@+id/tvEmailLog"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/bLoginLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/sign_in"
            android:backgroundTint="@color/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPaswdLog" />

        <TextView
            android:id="@+id/tvPaswdLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/paswd"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvEmailLog"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailLog" />

        <Button
            android:id="@+id/bRegisterLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/register"
            android:backgroundTint="@color/register"
            app:layout_constraintEnd_toEndOf="@+id/bLoginLog"
            app:layout_constraintStart_toStartOf="@+id/bLoginLog"
            app:layout_constraintTop_toBottomOf="@+id/bLoginLog" />

        <TextView
            android:id="@+id/tvEmailLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="72dp"
            android:text="@string/mail"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/etPaswdLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:ems="13"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvPaswdLog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tvPaswdLog"
            app:layout_constraintTop_toTopOf="@+id/tvPaswdLog"
            app:layout_constraintVertical_bias="0.423"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/login"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvStatusLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="mStatusTextView"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPaswdLog" />

        <TextView
            android:id="@+id/tvDetailLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="mDetailTextView"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStatusLog" />

        <Button
            android:id="@+id/bActivateLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/Activate"
            android:visibility="invisible"
            android:backgroundTint="@color/paswd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bRegisterLog" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>